Store uploads on disk instead of Grid FS

--- a/setup/manager/index.html
+++ b/setup/manager/index.html
@@ -80,7 +80,7 @@
 					<div class="form-group">
 						<label>Educations import file</label>
 						<input class="form-control" type="file" id="educationsFile" onchange="angular.element(this).scope().selectedEducationsFileChanged()">
-						<span class="help-block">Format: <pre>educationTypeId|educationThemeId|time|authorName|authorUserId|title|recordingId</pre></span>
+						<span class="help-block">Format: <pre>educationTypeId|educationThemeId|time|authorName|authorUserId|title|recordingFileName</pre></span>
 					</div>
 					<div class="form-group">
 						<label>Recordings folder Id</label>
