--- a/setup/manager/index.html
+++ b/setup/manager/index.html
@@ -26,7 +26,7 @@
 		<div class="col-sm-2">
 			<div class="radio"><label><input type="radio" ng-model="tool" ng-init="tool = 'login'" value="login">Login</label></div>
 			<div class="radio"><label><input type="radio" ng-model="tool" value="uploads">Uploads</label></div>
-			<div class="radio"><label><input type="radio" ng-model="tool" value="educations">Educations</label></div>
+			<div class="radio"><label><input type="radio" ng-model="tool" value="articles">Articles</label></div>
 		</div>
 		
 		<div class="col-sm-10" ng-switch="tool">
@@ -75,24 +75,35 @@
 				</table>
 			</div>
 			
-			<div ng-switch-when="educations" ng-controller="ImportEducationsCtrl as ctrl">
+			<div ng-switch-when="articles" ng-controller="ImportArticlesCtrl as ctrl">
 				<form class="bg-info" style="padding: 12px;">
 					<div class="form-group">
-						<label>Educations import file</label>
-						<input class="form-control" type="file" id="educationsFile" onchange="angular.element(this).scope().selectedEducationsFileChanged()">
-						<span class="help-block">Format: <pre>educationTypeId|educationThemeId|time|authorName|authorUserId|title|recordingFileName</pre></span>
+						<label>Articles import file</label>
+						<input class="form-control" type="file" id="articlesFile" onchange="angular.element(this).scope().selectedArticlesFileChanged()">
+						<span class="help-block">Format: <pre>articleTypeId|articleSerieTitle|time|authorName|title|content|recordingFileName</pre></span>
 					</div>
 					<div class="form-group">
-						<label>Recordings folder Id</label>
+						<label>Create articles of 'Article type' with ID </label>
+						<input class="form-control" type="text" ng-model="articleTypeId">
+					</div>
+					<div class="form-group">
+						<label>Find recordings in 'Asset folder' with ID</label>
 						<input class="form-control" type="text" ng-model="recordingsFolderId">
 					</div>
-					<button type="button" class="btn btn-primary" ng-click="ctrl.importEducations()">Import</button>
+					<div class="form-group">
+						<label>Create/Find authors of 'Resource type' with ID</label>
+						<input class="form-control" type="text" ng-model="authorResourceTypeId">
+					</div>
+					<hr style="border-color: lightblue">
+					<button type="button" class="btn btn-primary" ng-click="ctrl.createArticleSeries()">1. Create article series from articles</button>
+					<button type="button" class="btn btn-primary" ng-click="ctrl.createResources()">2. Create author resources from articles</button>
+					<button type="button" class="btn btn-primary" ng-click="ctrl.importArticles()">3. Import articles</button>
 				</form>
 				<br>
 				<table class="table table-striped">
 					<tbody>
 						<tr><th>Time</th><th>Title</th><th>Imported</th></tr>
-						<tr ng-repeat="item in ctrl.educations">
+						<tr ng-repeat="item in ctrl.articles">
 							<td>{{ item.time }}</td>
 							<td>{{ item.title }}</td>
 							<td>{{ item.imported }}</td>
@@ -107,7 +118,7 @@
 	<script src="./app/app.js" type="text/javascript"></script>
 	<script src="./app/ServerAPI.js" type="text/javascript"></script>
 	<script src="./app/Login.js" type="text/javascript"></script>
-	<script src="./app/ImportEducations.js" type="text/javascript"></script>
+	<script src="./app/ImportArticles.js" type="text/javascript"></script>
 	<script src="./app/ImportUploads.js" type="text/javascript"></script>
 </body>
 </html>
